# MCPI-Mods

./: .gitignore  CMakeLists.txt  README.md  build.sh
extended-creative-inventory/: CMakeLists.txt  README.md  creative.cpp
mcpi-competition/: CMakeLists.txt  README.md
mcpi-competition/week-1/: README.md  install.sh  jetpack.cpp
mcpi-competition/week-1/images/: en_US.lang
misc/: CMakeLists.txt  block_logging.cpp  dualwielding.cpp  extraslot.cpp  hud.cpp  invscrolling.cpp  pickblock.cpp  shiftclick.cpp  shiftitems.cpp  skins.cpp  sounds.cpp
modding-api/: CMakeLists.txt  custom-items.cpp  custom-items.h
week-1/: install.sh  jetpack.cpp
